fixtures/errors/class_super_outside.expected
exit_code: 1
--- stdout ---
--- stderr ---
Error: error: super is only valid inside methods
 --> errors/class_super_outside.js:3:10
3 |   return super.foo;
  |          ^^^^^^^^^

